# AI_Clerk

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  generate_pkce.py  manage.py  pyproject.toml  requirements.txt
ai_clerk/: asgi.py  settings.py  urls.py  wsgi.py
config/: settings.py  urls.py
core/: urls.py  utils.py  views.py
core/templates/core/: base.html  index.html  index1.html
core/templates/core/includes/: inc_menu.html
frontend/: views.py
frontend/templates/frontend/: home.html
media/: cleaned_text.txt  raw_text.txt
