[project]
name = "AI_Clerk"
version = "1.0.0"
description = "AI Clerk - автоматизация OCR, NLP и заполнения форм"
authors = [{ name = "Marcel Dio", email = "marceldiomare@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "django>=5.1.5",
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
    "spacy>=3.8.2,<3.13",  # Ограничиваем версию Python для spacy
    "transformers>=4.46.3",
    "python-docx>=1.1.2",
    "langdetect>=1.0.9",
    "pdf2image>=1.17.0",
    "redis>=5.2.1",
    "python-dotenv>=1.0.1",
    "smart-open>=5.2.1,<8.0.0"  # Добавляем ограничение для совместимости
]

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
